--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SSR TEST</title>
   </head>
+  <style>
+    body {
+      margin: 0;
+      display: block;
+      top: 0;
+      left: 0;
+    }
+  </style>
   <body>
     <div id="app"></div>
     <script type="module" src="main.js"></script>
